--- a/View/LLLoginViewController.xib
+++ b/View/LLLoginViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,7 +21,7 @@
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="FoP-yG-92A" customClass="YoshikoTextField" customModule="LLTVShow" customModuleProvider="target">
                     <rect key="frame" x="16" y="254" width="343" height="60"/>
-                    <color key="backgroundColor" red="0.74273854900000003" green="0.76640284420000004" blue="0.94127119349999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="343" id="2eW-4S-hVk"/>
                         <constraint firstAttribute="height" constant="60" id="Nm9-t0-tvH"/>
@@ -31,13 +31,13 @@
                     <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
-                            <color key="value" red="0.94047124339999999" green="0.30746724910000001" blue="0.16002418970000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="value" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="agh-aA-Wab" customClass="YoshikoTextField" customModule="LLTVShow" customModuleProvider="target">
                     <rect key="frame" x="16" y="329" width="343" height="60"/>
-                    <color key="backgroundColor" red="0.74273854900000003" green="0.76640284420000004" blue="0.94127119349999999" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="343" id="0kB-Ea-smL"/>
                         <constraint firstAttribute="height" constant="60" id="1ET-ei-Xj9"/>
@@ -47,13 +47,12 @@
                     <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
-                            <color key="value" red="0.94047124339999999" green="0.30746724910000001" blue="0.16002418970000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="value" red="0.60000002379999995" green="0.40000000600000002" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </textField>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="maV-i2-Dt7">
+                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="maV-i2-Dt7">
                     <rect key="frame" x="112.5" y="20" width="150" height="150"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="150" id="GRN-na-JRt"/>
                         <constraint firstAttribute="height" constant="150" id="XNz-TJ-oWV"/>
@@ -65,20 +64,18 @@
                     </userDefinedRuntimeAttributes>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="clip" translatesAutoresizingMaskIntoConstraints="NO" id="NqH-gJ-gkK">
-                    <rect key="frame" x="45" y="437" width="284" height="30"/>
+                    <rect key="frame" x="38" y="437" width="284" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="284" id="MrI-9X-AM9"/>
                         <constraint firstAttribute="height" constant="30" id="ubk-WE-rUo"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <state key="normal" title="登录">
                         <color key="titleColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="10"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
+                    <state key="selected">
+                        <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
                     <connections>
                         <action selector="checklogin:" destination="iN0-l3-epB" eventType="touchUpInside" id="XRf-Y5-TFW"/>
                     </connections>
@@ -91,16 +88,24 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="QeB-9L-FaD">
-                    <rect key="frame" x="46" y="397" width="284" height="30"/>
+                    <rect key="frame" x="38" y="397" width="284" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="6qy-Yg-UT6"/>
                         <constraint firstAttribute="width" constant="284" id="Z1L-eT-MRk"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
                     <state key="normal" title="注册">
                         <color key="titleColor" red="0.1015188206" green="0.39153362450000001" blue="0.94047124339999999" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
+                    <state key="selected">
+                        <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornRadius">
+                            <integer key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="register:" destination="iN0-l3-epB" eventType="touchUpInside" id="RG1-dt-uwV"/>
                     </connections>
@@ -112,12 +117,12 @@
                 <constraint firstItem="agh-aA-Wab" firstAttribute="top" secondItem="FoP-yG-92A" secondAttribute="bottom" constant="15" id="0PA-EW-Bdc"/>
                 <constraint firstItem="FoP-yG-92A" firstAttribute="top" secondItem="aIs-Cl-W7Y" secondAttribute="bottom" constant="43" id="CRs-hg-jYY"/>
                 <constraint firstItem="aIs-Cl-W7Y" firstAttribute="top" secondItem="maV-i2-Dt7" secondAttribute="bottom" constant="8" id="HnR-Kk-V2O"/>
-                <constraint firstItem="QeB-9L-FaD" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mvc-CU-WVt"/>
+                <constraint firstItem="QeB-9L-FaD" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-7.5" id="Mvc-CU-WVt"/>
                 <constraint firstItem="agh-aA-Wab" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="Q1a-me-8Qe"/>
                 <constraint firstItem="maV-i2-Dt7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="RRB-bp-UXR"/>
                 <constraint firstItem="QeB-9L-FaD" firstAttribute="top" secondItem="agh-aA-Wab" secondAttribute="bottom" constant="8" id="TFf-ap-s21"/>
                 <constraint firstItem="maV-i2-Dt7" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cAA-UI-QPO"/>
-                <constraint firstItem="NqH-gJ-gkK" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="jy2-Ky-Brh"/>
+                <constraint firstItem="NqH-gJ-gkK" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-7.5" id="jy2-Ky-Brh"/>
                 <constraint firstItem="FoP-yG-92A" firstAttribute="leading" secondItem="maV-i2-Dt7" secondAttribute="trailing" constant="-246.5" id="kPe-Fu-nbx"/>
                 <constraint firstItem="FoP-yG-92A" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="xq2-ph-Tqh"/>
                 <constraint firstItem="NqH-gJ-gkK" firstAttribute="top" secondItem="QeB-9L-FaD" secondAttribute="bottom" constant="10" id="yir-Ha-z0d"/>
@@ -133,6 +138,6 @@
         </view>
     </objects>
     <resources>
-        <image name="logo" width="150" height="117"/>
+        <image name="logo" width="152" height="50"/>
     </resources>
 </document>
